--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.3.0')
     // Firebase SDK for Google Analytics
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    // Firebase Google Authentication
+    implementation 'com.google.firebase:firebase-auth-ktx'
 
 
     testImplementation 'junit:junit:4.12'
