Sicronización de la librería para autenticación con cuentas de google

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     // Firebase Google Authentication
     implementation 'com.google.firebase:firebase-auth-ktx'
+    // Google Play services library
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
 
 
     testImplementation 'junit:junit:4.12'
